--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -159,7 +159,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Normal Distribution: Nature's Distribution"
+    "### The Normal Distribution: Nature's Distribution\n",
+    "* Often used to describe asset returns (in particular equities)"
    ]
   },
   {
