--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This Is the Current State of Artificial Intelligence in Commercial Real Estate"
+    "## The Current State of Artificial Intelligence in Commercial Real Estate"
    ]
   },
   {
@@ -131,6 +131,18 @@
     "%pylab inline\n",
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo('GX4DaXqkgpQ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forecast Errors\n",
+    "* FOMC lowered its target rate by 100 basis points (bps) during 2019\n",
+    "* Long-term interest rate fell substantially during 2019\n",
+    "* Yield curve was barely 30 bps in January 2019 and had been falling for two years\n",
+    "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor\n",
+    "* In other words, the predictions were not consistent with the economic data at the time the predictions were made"
    ]
   },
   {
