--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CBRE 2019 Forecast of 2020\n",
+    "## Prominent Brokerage Forecast of 2020 (in December 20190\n",
     "* Target Fed Funds Rate of 1.25% or 1.25 basis points (bps)\n",
     "* \"Good, not great\" for GDP growth.\n",
     "* Slight decline in capitalization rates $\\implies$ higher real estate values"
@@ -100,11 +100,12 @@
    "metadata": {},
    "source": [
     "## Concurrent Forecast Errors\n",
-    "* FOMC had already lowered its target rate by 100 bps (or 40%) during 2019\n",
-    "* Long-term interest rate fell substantially during 2019\n",
-    "* Yield curve was barely postiive in January 2019 and had been falling for two years\n",
+    "* FOMC had already lowered its target rate by 100 bps (or 40%) to 1.5% during 2019\n",
+    "* Long-term interest rate fell substantially during 2019 with the 10-year declining 30%\n",
+    "* Yield curve was 50 bps and had been falling for two years\n",
     "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor\n",
-    "* In other words, the predictions were not consistent with the economic data at the time the predictions were made"
+    "* In other words, **the predictions were not consistent with the economic data at the time the predictions were made**\n",
+    "* One might call this the **state of artificial intelligence in commercial real estate**"
    ]
   },
   {
