--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -79,8 +79,9 @@
     "                * Open source and free\n",
     "        * These notes will live until we turn out the lights.\n",
     "* Provide you with many examples from a variety of sources, including real estate and finance.\n",
-    "* Typical session: Lecture and discussion with examples, as well as in-class labs.  \n",
+    "* Typical week: Lecture with multiple examples, together with graded weekly assignments.  \n",
     "    * I know of no other way to learn data analytics than to do it repeatedly.\n",
+    "    * **Data analytics is a contact sport**.\n",
     "* By the end of this class, you will know more about data analysis than the chief economists of either CBRE or JLL. \n",
     "* **Never forget: If I can do this, so can you.  And you'll be better RE professionals.**"
    ]
@@ -90,9 +91,9 @@
    "metadata": {},
    "source": [
     "## Prominent Brokerage Forecast of 2020 (in December 20190\n",
-    "* Target Fed Funds Rate of 1.25% or 1.25 basis points (bps)\n",
+    "* Target Fed Funds Rate of 1.25% or 1.25 basis points (bps).\n",
     "* \"Good, not great\" for GDP growth.\n",
-    "* Slight decline in capitalization rates $\\implies$ higher real estate values"
+    "* Slight decline in capitalization rates $\\implies$ higher real estate valuations."
    ]
   },
   {
@@ -100,12 +101,12 @@
    "metadata": {},
    "source": [
     "## Concurrent Forecast Errors\n",
-    "* FOMC had already lowered its target rate by 100 bps (or 40%) to 1.5% during 2019\n",
-    "* Long-term interest rate fell substantially during 2019 with the 10-year declining 30%\n",
-    "* Yield curve was 50 bps and had been falling for two years\n",
-    "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor\n",
-    "* In other words, **the predictions were not consistent with the economic data at the time the predictions were made**\n",
-    "* One might call this the **state of artificial intelligence in commercial real estate**"
+    "* FOMC had already lowered its target rate by 100 bps (or 40%) to 1.5% during 2019.\n",
+    "* Long-term interest rate fell substantially during 2019 with the 10-year declining 30%.\n",
+    "* Yield curve was 50 bps and had been falling for two years.\n",
+    "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor.\n",
+    "* In other words, **the predictions were not consistent with the economic data at the time the predictions were made**.\n",
+    "* One might call this the **state of artificial intelligence in commercial real estate**.  "
    ]
   },
   {
