--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "## Concurrent Forecast Errors\n",
     "* FOMC had already lowered its target rate by 100 bps (or 40%) to 1.5% during 2019.\n",
-    "* Long-term interest rate fell substantially during 2019 with the 10-year declining 30%.\n",
+    "* Long-term interest rates fell substantially during 2019 with the 10-year U.S. Treasury declining by 30%.\n",
     "* Yield curve was 50 bps and had been falling for two years.\n",
     "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor.\n",
     "* In other words, **the predictions were not consistent with the economic data at the time the predictions were made**.\n",
