--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -90,10 +90,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prominent Brokerage Forecast of 2020 (in December 2019)\n",
-    "* Fed Funds target rate of 1.25% or 1.25 basis points (bps).\n",
+    "## Prominent CRE Brokerage Forecast for 2020 (in December 2019)\n",
+    "* Fed Funds target rate of 1.25% or 125 basis points (bps).\n",
     "* \"Good, not great\" output growth.\n",
-    "* Slight decline in capitalization rates $\\implies$ slightly higher real estate valuations."
+    "* Slight decline in capitalization rates $\\implies$ slightly higher real estate values."
    ]
   },
   {
@@ -102,10 +102,13 @@
    "source": [
     "## Concurrent Forecast Errors\n",
     "* FOMC had already lowered its target rate by 40% to 1.5% during 2019.\n",
+    "    * Inconsistent with a forecast of 1.25%.\n",
     "* Long-term interest rates fell substantially during 2019 with the 10-year U.S. Treasury declining by 30%.\n",
-    "* Yield curve was 50 bps and, by 2019, had been falling for two years.\n",
-    "    * It went negative by Q2 2019: Professor Campbell Harvey's recession predictor.\n",
+    "    * Reflecting slowing output growth.\n",
+    "* Yield curve (10-year minus 3-month) was below 50 bps and had been falling since 2017.\n",
+    "    * It was negative for substantial portions of 2019: Professor Campbell Harvey's recession predictor.\n",
     "* In other words, **the predictions were not consistent with the economic data at the time the predictions were made**.\n",
+    "    * *Live by the forecast, die by the forecast error*.\n",
     "* One might call this the **state of artificial intelligence in commercial real estate**.  "
    ]
   },
