--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -70,7 +70,7 @@
     "    \n",
     "\n",
     "\n",
-    "#### An Election Conjecture: Thought Leadership: \n",
+    "#### An Election Conjecture: Thought Leadership\n",
     "\n",
     "\n",
     "\n",
