--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -78,7 +78,7 @@
     "    * One Senior Economics Advisor said that rates would be \"back above 5%\".\n",
     "    * This was deemed at the time to be **thought leadership**.\n",
     "    * The expressed concern was a potential impact on cap rates.\n",
-    "    * A simple examination of data **at the time** would have suggested the likelihood "
+    "    * A simple examination of data **at the time** would have suggested the likelihood was low."
    ]
   },
   {
