--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "\n",
     "* Many **CRE** professionals claimed that long-duration rates would rise after the 2016 U.S. presidential election.\n",
-    "    * One Senior Economics Advisor said that rates would be \"back above 5%\".\n",
+    "    * One Senior Economic Advisor said that rates would be \"back above 5%\".\n",
     "    * This was deemed at the time to be **thought leadership**.\n",
     "    * The expressed concern was a potential impact on cap rates.\n",
     "    * A simple examination of data **at the time** would have suggested the likelihood was low."
