--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -1174,7 +1174,7 @@
     "* Issues:\n",
     "    * Costly.\n",
     "    * Based on small samples: Stage 3 cancer patients.\n",
-    "    * Often only a single study that not be repeated or reproduced."
+    "    * Often only a single study that cannot be repeated or reproduced."
    ]
   }
  ],
