--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -33,7 +33,8 @@
     "## A Continued Discussion of Empirical Causality\n",
     "\n",
     "* Prior to the 1930s, there were few to none government-sponsored measures of economic activity.\n",
-    "    * The US unemployment rate in 1930 was 25%.\n",
+    "    * The US unemployment rate in 1930 [was 25%](https://www.marketwatch.com/story/the-soaring-us-unemployment-rate-could-approach-great-depression-era-levels-2020-04-03).\n",
+    "    * In truth, this is an approximation as there were few measures of economic activity at the time.\n",
     "    * This is not to say that **sovereigns** were not economic actors.  [Remarkable research](https://www.bankofengland.co.uk/working-paper/2020/eight-centuries-of-global-real-interest-rates-r-g-and-the-suprasecular-decline-1311-2018) from the Bank of England on long-duration, risk-free interest rates.\n",
     "\n",
     "\n",
@@ -43,8 +44,8 @@
     "\n",
     "\n",
     "* In the US, the National Income and Product Accounts (NIPA) were born in 1934 and greatly expanded during and after WWII.\n",
-    "    * Gross National Product = Consumption + Gov't Spending + Investment + Exports - Imports = C + G + I + X - M\n",
-    "    * Gross Domestic Product = Consumption + Gov't Spending + Investment\n",
+    "    * Gross National Product = Consumption + Gov't Spending + Investment + Exports - Imports = $C + G + I + X - M$\n",
+    "    * Gross Domestic Product = Consumption + Gov't Spending + Investment = $C + G + I$\n",
     "\n",
     "\n",
     "\n",
@@ -52,15 +53,18 @@
     "\n",
     "\n",
     "\n",
-    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, GDP:\n",
-    "    * C = $C($personal income and other things$)$\n",
-    "    * G = $\\bar G$, fixed and given\n",
-    "    * I = $I($interest rates and other things$)$\n",
+    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, [GDP](https://en.wikipedia.org/wiki/Multiplier_(economics)):\n",
+    "    * $C = C($aggregate output and other things$)$\n",
+    "    * $G = \\bar G$, fixed and given\n",
+    "    * $I = I($interest rates, changes in consumption and other things$)$\n",
+    "    * Your spending is my income and my spending is your income\n",
+    "    * Consumption and investment are related via a multiplier\n",
     "\n",
     "\n",
     "\n",
     "* Ultimately Cowles would develop very large scale **macroeconometric models** to examine a host of different economic variables. \n",
-    "    * Approach was found to be inadequate for policy evaluation (“Goodhart’s law” and “Lucas critique”).\n",
+    "    * Hard-won gains\n",
+    "    * But approach was found to be inadequate for policy evaluation: **Goodhart’s Conjecture** and the **Lucas critique**.\n",
     "    \n",
     "\n",
     "\n",
@@ -68,11 +72,11 @@
     "\n",
     "* Goodhart “asserts that any economic relation tends to break down when used for policy purposes.”  [Wickens](https://www.amazon.com/Macroeconomic-Theory-Dynamic-Equilibrium-Approach/dp/0691152861/ref=sr_1_1?dchild=1&keywords=wickens&qid=1591918350&sr=8-1)\n",
     "    * Proposed relationships, economic or otherwise, are not structural in nature.\n",
-    "    * Instead they sre derived from fundamental behavioral relationships (structural).\n",
+    "    * Instead they are derived from fundamental behavioral relationships (sometimes called *structural*).\n",
     "    \n",
     "\n",
     "\n",
-    "### Lucas Critique\n",
+    "### The Lucas Critique\n",
     "\n",
     "* Lucas (1976) notes that individual decision rules affected by policy are driven by “deep structural parameters.” \n",
     "    * Decision rules and, therefore, decisions are contingent on the state of the system as it is.\n",
@@ -89,9 +93,9 @@
     "* Examples\n",
     "    * **Natural disasters**\n",
     "        * 1906 S.F. earthquake to examine the impact of stock changes (vacancy) on rent.\n",
-    "            * $\\rightarrow$ given the gold standard, arguably created the 1907 Depression, the proximate cause of the 1913 Federal Reserve Act.\n",
-    "        * Hurricane Sandy.\n",
-    "        * COVID-19.\n",
+    "            * $\\rightarrow$ given the gold standard, the 1906 earthquake arguably **caused** the 1907 Depression, the proximate cause of the 1913 Federal Reserve Act\n",
+    "        * Hurricane Sandy and a [potential algorithmic counterfactual](https://github.com/thsavage/Causation/blob/master/Poster.pdf).\n",
+    "        * COVID-19 and its [potential impacts](https://www.vox.com/recode/2020/4/14/21211789/coronavirus-office-space-work-from-home-design-architecture-real-estate) on commercial real estate.\n",
     "    * **Lotteries** that truly randomize a group of individuals.  \n",
     "        * Vietnam draft in the US as a means to explore the impacts of education on wages.\n",
     "        * Delay in schooling reduces wages (even if the same level of schooling is achieved).\n",
