--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "\n",
     "\n",
-    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, [GDP](https://en.wikipedia.org/wiki/Multiplier_(economics)):\n",
+    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, [GDP](https://en.wikipedia.org/wiki/Multiplier_(economics):\n",
     "    * $C = C($aggregate output and other things$)$\n",
     "    * $G = \\bar G$, fixed and given\n",
     "    * $I = I($interest rates, changes in consumption and other things$)$\n",
@@ -63,8 +63,8 @@
     "\n",
     "\n",
     "* Ultimately Cowles would develop very large scale **macroeconometric models** to examine a host of different economic variables. \n",
-    "    * Hard-won gains\n",
-    "    * But approach was found to be inadequate for policy evaluation: **Goodhart’s Conjecture** and the **Lucas critique**.\n",
+    "    * Hard-won gains in our understanding of data analytics.\n",
+    "    * But the approach was found to be inadequate for policy evaluation: **Goodhart’s Conjecture** and the **Lucas critique**.\n",
     "    \n",
     "\n",
     "\n",
