--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -58,7 +58,7 @@
     "    * $G = \\bar G$, fixed and given\n",
     "    * $I = I($interest rates, changes in consumption and other things$)$\n",
     "    * Your spending is my income and my spending is your income\n",
-    "    * Consumption and investment are related via a multiplier\n",
+    "    * Consumption and investment are related via a [multiplier](https://en.wikipedia.org/wiki/Multiplier_(economics))\n",
     "\n",
     "\n",
     "\n",
