--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -53,12 +53,12 @@
     "\n",
     "\n",
     "\n",
-    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, [GDP](https://en.wikipedia.org/wiki/Multiplier_(economics):\n",
+    "* Cowles approach was a probabilistic framework to estimate systems of simultaneous equations to model an economy.  Consider, [GDP](https://en.wikipedia.org/wiki/Fiscal_multiplier):\n",
     "    * $C = C($aggregate output and other things$)$\n",
     "    * $G = \\bar G$, fixed and given\n",
     "    * $I = I($interest rates, changes in consumption and other things$)$\n",
     "    * Your spending is my income and my spending is your income\n",
-    "    * Consumption and investment are related via a [multiplier](https://en.wikipedia.org/wiki/Multiplier_(economics))\n",
+    "    * Consumption and investment are related via a [multiplier](https://en.wikipedia.org/wiki/Fiscal_multiplier)\n",
     "\n",
     "\n",
     "\n",
