--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Goodness of Fit: R$^2$\n",
+    "## Goodness of Fit: The R Squared\n",
     "\n",
     "* Different statisical computing environments largely produce the same regression ouput, formatted differently.  \n",
     "    * This information is typically used for **regression diagnosgics**.  \n",
