--- a/Week 4.ipynb
+++ b/Week 4.ipynb
@@ -164,7 +164,7 @@
     "## Goodness of Fit: The R Squared\n",
     "\n",
     "* Different statisical computing environments largely produce the same regression ouput, formatted differently.  \n",
-    "    * This information is typically used for **regression diagnosgics**.  \n",
+    "    * This information is typically used for **regression diagnostics**.  \n",
     "    * We have discussed regression coefficients and their interpretation, as well as the use of  confidence intervals for hypothesis testing. \n",
     "\n",
     "\n",
@@ -172,7 +172,7 @@
     "* The R$^2$ **goodness of fit** metric is a frequently-cited regression diagnostic.  \n",
     "    * If a linear regression uses a constant (which should be included in practice), the R$^2$ is bounded between 0 and 1.  \n",
     "    * It measures the share of the variation in $y$ explained by the variation in the features used in a model.  \n",
-    "    * Given this definition, the idea that **bigger is better** tends to prevail.  is the first place that people go to evaluate the quality of the model, which is unwarranted.  \n",
+    "    * Given this definition, the idea that **bigger is better** tends to prevail, but is unwarranted.  \n",
     "\n",
     "\n",
     "\n",
@@ -196,6 +196,13 @@
     "    \n",
     "* The valid application of the R$^2$ metric is to compare nested models.  (In time series, we will see another method of optimization, called the **method of maximum likelihood**.  The same argument will prevail there.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
