--- a/Week 5.ipynb
+++ b/Week 5.ipynb
@@ -30,6 +30,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### This is evidence of omitted variable bias (sometimes called the \"collinearity problem\")\n",
     "* Failing to include land_size has biased up the measured effect of unit_size because the two features are positively correlated.\n",
     "\n",
@@ -43,7 +50,7 @@
     "\n",
     "\n",
     "\n",
-    "* We see that the R-squared rises from 0.302 to 0.387, indicating a considerable improvement in the fit of the data."
+    "* We see that the R$^2$ rises from 0.302 to 0.387, indicating a considerable improvement in the fit of the data."
    ]
   },
   {
