--- a/Week 5.ipynb
+++ b/Week 5.ipynb
@@ -15,15 +15,15 @@
     "\n",
     "\n",
     "\n",
-    "### 5.1: The Zestimate: House Pricing Using Hedonics\n",
+    "### The Zestimate: House Pricing Using Hedonics\n",
     "\n",
     "\n",
     "\n",
-    "### 5.2: The Linear Probability Model: Making Predictions (Rather than Evaluating the Impact of an Intervention) \n",
+    "### The Linear Probability Model: Making Predictions (Rather than Evaluating the Impact of an Intervention) \n",
     "\n",
     "\n",
     "\n",
-    "### 5.3: Breaking the Algorithm: Omitted Variable Bias"
+    "### Breaking the Algorithm: Omitted Variable Bias"
    ]
   },
   {
