--- a/Week 6.ipynb
+++ b/Week 6.ipynb
@@ -294,7 +294,7 @@
     "### Historical Development of Time Series Analysis\n",
     "* Analytic tools heavily driven by economics and finance.\n",
     "* Major innovations include autoregression, moving averages, and integrated processes (unit roots).\n",
-    "* Core ideal was to recognize that some underlying process was generating data that may have no causal interpretation.\n",
+    "* Core idea was to recognize that some underlying process was generating data that may have no causal interpretation.\n",
     "* University of California at San Diego was ground-zero:\n",
     "     * Robert Engle, Clive Granger, and Hal White.\n",
     "    * James Hamilton’s *Time Series Analysis* remains the canonical reference.\n",
